# pawspective-client

./: .clang-tidy  .cppcheck_suppressions  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  manage.py
.github/workflows/: ci.yml
github-issues/: 109-registerorganizationview-undefined-to-qstring.md
include/: mainwindow.hpp  validator.hpp
include/models/: animal_dto.hpp  animal_enums.hpp  animal_filter_dto.hpp  animal_register_dto.hpp  animal_update_dto.hpp  breed_dto.hpp  city_dto.hpp  organization_dto.hpp  organization_register_dto.hpp  organization_update_dto.hpp  user_dto.hpp  user_register_dto.hpp  user_update_dto.hpp
include/services/: animal_service.hpp  auth_service.hpp  breed_service.hpp  city_service.hpp  errors.hpp  i_network_client.hpp  network_client.hpp  organization_service.hpp  user_service.hpp
include/utils/: json.hpp  logger.hpp
include/viewmodels/: animal_card_viewmodel.hpp  animal_detail_viewmodel.hpp  animal_list_viewmodel.hpp  base.hpp  create_animal_viewmodel.hpp  login_view_model.hpp  organization_card_viewmodel.hpp  organization_view_model.hpp  register_organization_view_model.hpp  register_view_model.hpp  search_organization_viewmodel.hpp  update_animal_viewmodel.hpp  update_organization_viewmodel.hpp  user_update_viewmodel.hpp  user_viewmodel.hpp
qml/: AnimalCardView.qml  AnimalCreateView.qml  AnimalDetailView.qml  AnimalListView.qml  AnimalUpdateView.qml  CustomButton.qml  FieldTag.qml  FilterRangeInput.qml  LoaderSpinner.qml  LoginView.qml  Main.qml  OrganizationCardView.qml  OrganizationView.qml  RegisterOrganizationView.qml  RegisterView.qml  SearchView.qml  UpdateOrganizationView.qml  UserUpdateView.qml  UserView.qml
src/: CMakeLists.txt  main.cpp  mainwindow.cpp
src/models/: CMakeLists.txt  animal_dto.cpp  animal_enums.cpp  animal_filter_dto.cpp  animal_register_dto.cpp  animal_update_dto.cpp  breed_dto.cpp  city_dto.cpp  organization_dto.cpp  organization_register_dto.cpp  organization_update_dto.cpp  user_dto.cpp  user_register_dto.cpp  user_update_dto.cpp
src/services/: CMakeLists.txt  animal_service.cpp  auth_service.cpp  breed_service.cpp  city_service.cpp  errors.cpp  network_client.cpp  organization_service.cpp  user_service.cpp
src/state/: CMakeLists.txt
src/utils/: CMakeLists.txt  json.cpp  validator.cpp
src/utils/include/utils/: validator.hpp
src/viewmodels/: CMakeLists.txt  animal_card_viewmodel.cpp  animal_detail_viewmodel.cpp  animal_list_viewmodel.cpp  base.cpp  create_animal_viewmodel.cpp  login_view_model.cpp  organization_card_viewmodel.cpp  organization_view_model.cpp  register_organization_view_model.cpp  register_view_model.cpp  search_organization_viewmodel.cpp  update_animal_viewmodel.cpp  update_organization_viewmodel.cpp  user_update_viewmodel.cpp  user_viewmodel.cpp
tests/: animal_service_test.cpp  breed_service_test.cpp  network_client_test.cpp  organization_service_test.cpp  validator_test.cpp
